[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/ExplosionAnim/Expl0.png" type="Texture" id=2]
[ext_resource path="res://Assets/ExplosionAnim/Expl1.png" type="Texture" id=3]
[ext_resource path="res://Assets/ExplosionAnim/Expl2.png" type="Texture" id=4]
[ext_resource path="res://Assets/ExplosionAnim/Expl3.png" type="Texture" id=5]
[ext_resource path="res://Assets/ExplosionAnim/Expl4.png" type="Texture" id=6]
[ext_resource path="res://Assets/ExplosionAnim/Expl5.png" type="Texture" id=7]
[ext_resource path="res://Assets/ExplosionAnim/Expl6.png" type="Texture" id=8]
[ext_resource path="res://Assets/ExplosionAnim/Expl7.png" type="Texture" id=9]
[ext_resource path="res://Assets/ExplosionAnim/Expl8.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Explosion1",
"speed": 15.0
} ]

[node name="Bullet" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
speed = null
lifetime = null

[node name="Collision" type="CollisionShape2D" parent="." index="0"]

[node name="Sprite" type="Sprite" parent="." index="1"]

_sections_unfolded = [ "Transform" ]

[node name="Life" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="3"]

scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Explosion1"
frame = 8
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]

[connection signal="timeout" from="Life" to="." method="_on_Life_timeout"]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]


